--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <title>Marc Chamberlin</title>
     <meta name="description" content="About Marc Chamberlin">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <style>
-        body {
-            padding-top: 50px;
-            padding-bottom: 20px;
-        }
-    </style>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/main.css">
 
@@ -27,69 +21,284 @@
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
 
     <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p>
-            <a class="btn btn-default" href="#" role="button">View details &raquo;</a>
-          </p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
 
-      <hr>
+      <div class="col-xs-offset-1 col-xs-10">
+        <!-- Header -->
+        <div class="row header">
+          <h1>Marc Chamberlin <small>Web & Software Engineer</small></h1>
 
-      <footer>
-        <p>&copy; Company 2015</p>
-      </footer>
-    </div> <!-- /container -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+          <a id="email" href="" class="btn btn-default">
+            <i class="fa fa-envelope fa-lg"></i>
+          </a>
+
+          <a href="http://www.linkedin.com/in/chamberlinmarc/en" class="btn btn-default">
+            <i class="fa fa-linkedin fa-lg"></i>
+          </a>
+
+          <a href="https://github.com/Chambeur" class="btn btn-default">
+            <i class="fa fa-github fa-lg"></i>
+          </a>
+
+          <a href="http://stackoverflow.com/users/2969823/chambeur?tab=profile" class="btn btn-default">
+            <i class="fa fa-stack-overflow fa-lg"></i>
+          </a>
+
+        </div> <!-- row -->
+
+        <!-- work experience -->
+        <div class="row">
+          <h2>Work Experience</h2>
+
+          <!-- DoctHeure -->
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/doctheure.jpg" alt="DoctHeure Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col-3 -->
+
+            <div class="col-xs-10">
+              <h3>DoctHeure - Founder <small>Paris - Jan 2013 to present</small></h3>
+
+              <p>
+                Founded and managed a solo startup of web solutions for medical practitioners. Created a web application based on customer's needs.Along the technical parts, worked on business development, costs estimation, sales forcasting, and sales.
+              </p>
+
+              <h4>
+                <span class="label label-primary">Web Development</span>
+                <span class="label label-primary">Web Administration</span>
+                <span class="label label-primary">Healthcare</span>
+                <span class="label label-primary">Entrepreneurship</span>
+                <span class="label label-primary">Customer's Relationship</span>
+              </h4>
+
+            </div> <!-- col-9 -->
+          </div> <!-- row -->
+
+          <hr>
+
+          <!-- Lipton Fit -->
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/liptonfit.jpg" alt="Lipton Fit Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col-3 -->
+
+            <div class="col-xs-10">
+              <h3>Lipton Fit - Software Engineer Consultant <small>Paris - Mar 2011 to Jan 2013</small></h3>
+
+              <p>
+                In mission at Caceis Fund Administration as Software Engineer. Lead Developer of the Financial Reporting Team (3 developers). Responsible of the enhancement of new features of the business core software as IFRS7 risk calculation or third-party software StatPro integration. Designed financial reporting templates and populated them with stored procedures that accessed a datawarehouse.
+              </p>
+
+              <h4>
+                <span class="label label-primary">Software Development</span>
+                <span class="label label-primary">Team development</span>
+                <span class="label label-primary">Banking Services</span>
+                <span class="label label-primary">Middleware Architecture</span>
+              </h4>
+            </div> <!-- col-9 -->
+          </div> <!-- row -->
+
+        </div> <!-- row -->
+
+        <!-- Projects -->
+        <div class="row">
+          <h2>Projects</h2>
+
+          <!-- DoctHeure -->
+          <div class="row">
+            <h3>DoctHeure Web Application</h3>
+
+            <div class="col-xs-8">
+              <h4>Description</h4>
+              <p><a href="www.doctheure.com">www.doctheure.com</a></p>
+
+              <p>
+                DoctHeure is a web application that allow medical practitioners to easily automate secretary's tasks. The patient can take an appointment on the web application or by phone call. An email and/or a sms is send the day before the appointment. The features can be configure by the practitioner to fit his needs.
+              </p>
+
+              <p>
+                The application have been developed by myself and the open-source community through a rigourous development method. The kanban process was use to list and prioritize tasks and keep a trace of deployment cycle (test, development, staging, production). The TDD process was used to keep the application clean and to avoid any regressions.
+              </p>
+
+            </div> <!-- col-6 -->
+
+            <div class="col-xs-4">
+              <h4>Stack</h4>
+
+              <dl>
+                <dt>Back-end</dt>
+                <span class="label label-primary">Ruby-on-Rails</span>
+                <span class="label label-primary">Postgresql</span>
+                <span class="label label-primary">Devise</span>
+                <span class="label label-primary">ActiveAdmin</span>
+
+                <dt>Front-end</dt>
+                <span class="label label-warning">Bootstrap</span>
+                <span class="label label-warning">HTML5 CSS3</span>
+                <span class="label label-warning">SASS</span>
+
+                <dt>Testing</dt>
+                <span class="label label-success">TDD</span>
+                <span class="label label-success">RSpec</span>
+                <span class="label label-success">FactoryGirl</span>
+                <span class="label label-success">Capybara</span>
+                <span class="label label-success">Guard</span>
+
+                <dt>Third Party Application</dt>
+                <span class="label label-danger">Twilio</span>
+                <span class="label label-danger">SMSFactor</span>
+                <span class="label label-danger">Mandrill</span>
+                <span class="label label-danger">Geocoder</span>
+
+                <dt>Admin Tools</dt>
+                <span class="label label-info">Heroku</span>
+                <span class="label label-info">Sentry</span>
+
+                <dt>Development Tools</dt>
+                <span class="label label-default">Trello</span>
+                <span class="label label-default">Git</span>
+                <span class="label label-default">Github</span>
+                <span class="label label-default">Sublime</span>
+              </dl>
+
+            </div> <!-- col-6 -->
+          </div> <!-- row -->
+
+          <hr>
+
+          <!-- IFRS7 Risk Calculation -->
+          <div class="row">
+            <h3>IFRS7 Risk Calculation</h3>
+
+            <div class="col-xs-8">
+              <h4>Description</h4>
+
+              <p>
+                The IFRS7 notation is a value from 1(good) to 3(bad) that estimate the risk level of each assets of a financial portfolio (hedge fund). The value is weight by rules like for example the nationality of the fund or the type of asset. Each fund holder can choose the rules they want to apply.
+              </p>
+
+              <p>
+                The existing business core software had a Service Oriented Architecture so the feature was implemented as a web service and "plug" in the existing system. The service was triggered by an UI through an API. The UI also allowed the user to create and to weight rules to a portfolio. A specific algorithm was design to reduce databases I/O and avoid unnecessary operations.
+              </p>
+
+            </div> <!-- col-6 -->
+
+            <div class="col-xs-4">
+              <h4>Stack</h4>
+
+              <dl>
+                <dt>Back-end</dt>
+                <span class="label label-primary">Java J2EE</span>
+                <span class="label label-primary">Sybase</span>
+                <span class="label label-primary">Struts</span>
+                <span class="label label-primary">Hibernate</span>
+
+                <dt>Front-end</dt>
+                <span class="label label-warning">JSP</span>
+
+                <dt>Testing</dt>
+                <span class="label label-success">JUnit</span>
+
+                <dt>Development Tools</dt>
+                <span class="label label-default">Jirah</span>
+                <span class="label label-default">SVN</span>
+                <span class="label label-default">Eclipse</span>
+              </dl>
+
+            </div> <!-- col-6 -->
+          </div> <!-- row -->
+
+          <hr>
+
+          <!-- Actuate -->
+          <div class="row">
+            <h3>Financial Reporting Generation</h3>
+
+            <div class="col-xs-8">
+              <h4>Description</h4>
+
+              <p>
+                A financial reporting is 2 pages of technical information about a financial portfolio. The project was to automate monthly reporting of specific portfolios with informations saved in a datawarehouse. I used the software Actuate to design the reporting template and populated it trough stocked procedure.
+              </p>
+
+              <p>
+                Actuate design module is built on Visual Basic language. It allowed me to create DRY design component for templates (such as headers, footers, curves, tables).
+              </p>
+
+            </div> <!-- col-6 -->
+
+            <div class="col-xs-4">
+              <h4>Stack</h4>
+
+              <dl>
+                <dt>Database</dt>
+                <span class="label label-primary">Datawarehouse Model</span>
+                <span class="label label-primary">Sybase</span>
+                <span class="label label-primary">Transact SQL</span>
+
+                <dt>Design Tool</dt>
+                <span class="label label-warning">Actuate</span>
+                <span class="label label-warning">Visual Basic</span>
+              </dl>
+
+            </div> <!-- col-6 -->
+          </div> <!-- row -->
+        </div> <!-- row -->
+
+        <hr>
+
+        <!-- Education -->
+        <div class="row">
+          <h2>Education</h2>
+
+          <!-- Epita -->
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/epita.jpg" alt="Epita Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col-3 -->
+
+            <div class="col-xs-10">
+              <h3>EPITA - Master in Computer Science <small>Paris - 2011</small></h3>
+              <h4>Specialized in Information System and Software Engineering</h4>
+
+              <p>
+                Learned programming, data structures and algorithms, UNIX, software development methodology, programming languages (C, C++, Perl, OCaml, Java), and general engineering skills.
+              </p>
+
+              <p>
+                Been elected class representative 5 years in a row. Worked on cohesion of the group, delivered information to the class, organized the course planning of the last year school, improved the sense of organization and team working cohesion.
+              </p>
+
+            </div> <!-- col-9 -->
+          </div> <!-- row -->
+
+          <!-- Languages -->
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/languages.png" alt="Languages Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col-3 -->
+
+            <div class="col-xs-10">
+              <h3>Languages</h3>
+
+              <dl>
+                <dt>French</dt>
+                <dd>Mother tongue</dd>
+
+                <dt>English</dt>
+                <dd>Advanced level (TOEIC: 900/990)</dd>
+              </dl>
+
+            </div> <!-- col-9 -->
+          </div> <!-- row -->
+        </div> <!-- row -->
+
+
+      </div> <!-- col-off-1 col-10 -->
+    </div> <!-- container -->
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
     <script src="js/vendor/bootstrap.min.js"></script>
