--- a/index.html
+++ b/index.html
@@ -51,6 +51,37 @@
         <div class="row">
           <h2>Work Experience</h2>
 
+          <!--  -->
+          <div class="row">
+            <div class="col-xs-2">
+
+            </div> <!-- col-3 -->
+
+            <div class="col-xs-10">
+              <h3>Confidential - Technical leader <small>Hong Kong - Jul 2015 to present</small></h3>
+
+              <p>
+                Rebuilt and enhanced the leading social platform in Hong Kong that connects families and domestic helpers.
+                Second person to join this social startup, my role is to analyze the business needs, provide solutions according to the constraints we have to face.
+                In addition, I have the responsibility to keep the website up and scalable by delivering clean, maintainable and tested codebase.
+              </p>
+
+              <p>
+                The website attracts around 8000 users per day. The startup itself was rewarded in Hong Kong for its social impact and was the only asian finalist in a purposed-based contest supported by the UN Foundation.
+              </p>
+
+              <h4>
+                <span class="label label-primary">Web Development</span>
+                <span class="label label-primary">Web Administration</span>
+                <span class="label label-primary">Startup</span>
+                <span class="label label-primary">Social Enterprise</span>
+              </h4>
+
+            </div> <!-- col-9 -->
+          </div> <!-- row -->
+
+          <hr>
+
           <!-- DoctHeure -->
           <div class="row">
             <div class="col-xs-2">
@@ -58,10 +89,10 @@
             </div> <!-- col-3 -->
 
             <div class="col-xs-10">
-              <h3>DoctHeure - Founder <small>Paris - Jan 2013 to present</small></h3>
+              <h3>DoctHeure - Founder <small>Paris - Jan 2013 to Jul 2015</small></h3>
 
               <p>
-                Founded and managed a solo startup of web solutions for medical practitioners. Created a web application based on customer's needs.Along the technical parts, worked on business development, costs estimation, sales forcasting, and sales.
+                Founded and managed a solo startup of web solutions for medical practitioners. Created a web application based on customer's needs. Along the technical parts, worked on business development, costs estimation, sales forcasting, and sales.
               </p>
 
               <h4>
@@ -104,6 +135,70 @@
         <!-- Projects -->
         <div class="row">
           <h2>Projects</h2>
+
+          <!-- ??? -->
+          <div class="row">
+            <h3>Domestic Helpers Platform</h3>
+
+            <div class="col-xs-8">
+              <h4>Description</h4>
+
+              <p>
+                Redesigned the whole application architecture, developped the new platform, managed the transition from the previous website, secured the payment workflow and integrated new business features. Business needs are specified directly by the CEO and then designed and implementded by me. The development cycle is agile following a TDD process, each features is tested and developped piece by piece and deployed as soon as possible in production.
+              </p>
+
+              <p>
+                The website users are present in 10 countries and a large part are using the previous generation smartphones. To handle these constraints the website is built using responsive design techniques available on modern and legacy browsers. The core of the architecture is a Ruby-on-Rails application (MVC, REST) associated with the "best for the job" tools.
+              </p>
+
+            </div> <!-- col-6 -->
+
+            <div class="col-xs-4">
+              <h4>Stack</h4>
+
+              <dl>
+                <dt>Back-end</dt>
+                <span class="label label-primary">Ruby-on-Rails</span>
+                <span class="label label-primary">Postgresql</span>
+                <span class="label label-primary">Redis</span>
+                <span class="label label-primary">Devise</span>
+                <span class="label label-primary">ActiveAdmin</span>
+
+                <dt>Front-end</dt>
+                <span class="label label-warning">Bootstrap</span>
+                <span class="label label-warning">HTML5 CSS3</span>
+                <span class="label label-warning">SASS</span>
+
+                <dt>Testing</dt>
+                <span class="label label-success">TDD</span>
+                <span class="label label-success">RSpec</span>
+                <span class="label label-success">FactoryGirl</span>
+                <span class="label label-success">Capybara</span>
+                <span class="label label-success">Guard</span>
+
+                <dt>Third Party Application</dt>
+                <span class="label label-danger">Paypal</span>
+                <span class="label label-danger">Stripe</span>
+                <span class="label label-danger">Mandrill/Mailchimp</span>
+                <span class="label label-danger">Facebook</span>
+
+                <dt>Admin Tools</dt>
+                <span class="label label-info">Engine Yard</span>
+                <span class="label label-info">New Relic</span>
+                <span class="label label-info">Sentry</span>
+                <span class="label label-info">Google Analytics</span>
+
+                <dt>Development Tools</dt>
+                <span class="label label-default">Jira</span>
+                <span class="label label-default">Git</span>
+                <span class="label label-default">Github</span>
+                <span class="label label-default">Sublime</span>
+              </dl>
+
+            </div> <!-- col-6 -->
+          </div> <!-- row -->
+
+          <hr>
 
           <!-- DoctHeure -->
           <div class="row">
@@ -305,14 +400,13 @@
 
     <script src="js/main.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    <!-- Segment -->
+    <script type="text/javascript">
+      !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
+      analytics.load("KoH2mSDIgeaNoqpW5jyFFWrHAYiKXb32");
+      analytics.page();
+      }}();
     </script>
+
   </body>
 </html>
