Fix typos and recommendations

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
             </div> <!-- col-3 -->
 
             <div class="col-xs-10">
-              <h3>Confidential - Technical leader <small>Hong Kong - Jul 2015 to present</small></h3>
+              <h3>HK Startup - Tech Lead <small>Hong Kong - Jul 2015 to present</small></h3>
 
               <p>
-                Rebuilt and enhanced the leading social platform in Hong Kong that connects families and domestic helpers.
+                Rebuild and enhance the leading social platform in Hong Kong that connects families and domestic helpers.
                 Second person to join this social startup, my role is to analyze the business needs, provide solutions according to the constraints we have to face.
                 In addition, I have the responsibility to keep the website up and scalable by delivering clean, maintainable and tested codebase.
               </p>
 
               <p>
-                The website attracts around 8000 users per day. The startup itself was rewarded in Hong Kong for its social impact and was the only asian finalist in a purposed-based contest supported by the UN Foundation.
+                The website attracts more than 8000 users per day. The startup itself was rewarded in Hong Kong for its social impact and was the only asian finalist in a purposed-based contest supported by the UN Foundation.
               </p>
 
               <h4>
@@ -144,7 +144,7 @@
               <h4>Description</h4>
 
               <p>
-                Redesigned the whole application architecture, developped the new platform, managed the transition from the previous website, secured the payment workflow and integrated new business features. Business needs are specified directly by the CEO and then designed and implementded by me. The development cycle is agile following a TDD process, each features is tested and developped piece by piece and deployed as soon as possible in production.
+                Redesigned the whole application architecture, developed the new platform, managed the transition from the previous website, secured the payment workflow and integrated new business features. Business needs are specified directly by the CEO and then designed and implemented by me. The development cycle is agile following a TDD process, each features is tested and developed piece by piece and deployed as soon as possible in production.
               </p>
 
               <p>
