add HelperChoice thumbnail

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <div class="row">
           <h2>Work Experience</h2>
 
-          <!--  -->
+          <!-- HelperChoice -->
           <div class="row">
             <div class="col-xs-2">
-
-            </div> <!-- col-3 -->
+              <img src="./img/helperchoice.png" alt="HelperChoice Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col -->
 
             <div class="col-xs-10">
-              <h3>HK Startup - Tech Lead <small>Hong Kong - Jul 2015 to present</small></h3>
+              <h3>HelperChoice - Tech Lead <small>Hong Kong - Jul 2015 to present</small></h3>
 
               <p>
                 Rebuild and enhance the leading social platform in Hong Kong that connects families and domestic helpers.
@@ -77,7 +77,7 @@
                 <span class="label label-primary">Social Enterprise</span>
               </h4>
 
-            </div> <!-- col-9 -->
+            </div> <!-- col -->
           </div> <!-- row -->
 
           <hr>
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/doctheure.jpg" alt="DoctHeure Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col-3 -->
+            </div> <!-- col -->
 
             <div class="col-xs-10">
               <h3>DoctHeure - Founder <small>Paris - Jan 2013 to Jul 2015</small></h3>
@@ -103,7 +103,7 @@
                 <span class="label label-primary">Customer's Relationship</span>
               </h4>
 
-            </div> <!-- col-9 -->
+            </div> <!-- col -->
           </div> <!-- row -->
 
           <hr>
@@ -112,7 +112,7 @@
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/liptonfit.jpg" alt="Lipton Fit Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col-3 -->
+            </div> <!-- col -->
 
             <div class="col-xs-10">
               <h3>Lipton Fit - Software Engineer Consultant <small>Paris - Mar 2011 to Jan 2013</small></h3>
@@ -127,7 +127,7 @@
                 <span class="label label-primary">Banking Services</span>
                 <span class="label label-primary">Middleware Architecture</span>
               </h4>
-            </div> <!-- col-9 -->
+            </div> <!-- col -->
           </div> <!-- row -->
 
         </div> <!-- row -->
@@ -351,7 +351,7 @@
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/epita.jpg" alt="Epita Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col-3 -->
+            </div> <!-- col -->
 
             <div class="col-xs-10">
               <h3>EPITA - Master in Computer Science <small>Paris - 2011</small></h3>
@@ -365,14 +365,14 @@
                 Been elected class representative 5 years in a row. Worked on cohesion of the group, delivered information to the class, organized the course planning of the last year school, improved the sense of organization and team working cohesion.
               </p>
 
-            </div> <!-- col-9 -->
+            </div> <!-- col -->
           </div> <!-- row -->
 
           <!-- Languages -->
           <div class="row">
             <div class="col-xs-2">
               <img src="./img/languages.png" alt="Languages Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col-3 -->
+            </div> <!-- col -->
 
             <div class="col-xs-10">
               <h3>Languages</h3>
@@ -385,7 +385,7 @@
                 <dd>Advanced level (TOEIC: 900/990)</dd>
               </dl>
 
-            </div> <!-- col-9 -->
+            </div> <!-- col -->
           </div> <!-- row -->
         </div> <!-- row -->
 
