add helperchoice url

--- a/index.html
+++ b/index.html
@@ -136,12 +136,14 @@
         <div class="row">
           <h2>Projects</h2>
 
-          <!-- ??? -->
+          <!-- HelperChoice -->
           <div class="row">
-            <h3>Domestic Helpers Platform</h3>
+            <h3>HelperChoice Platform</h3>
 
             <div class="col-xs-8">
               <h4>Description</h4>
+
+              <p><a href="www.helperchoice.com">www.helperchoice.com</a></p>
 
               <p>
                 Redesigned the whole application architecture, developed the new platform, managed the transition from the previous website, secured the payment workflow and integrated new business features. Business needs are specified directly by the CEO and then designed and implemented by me. The development cycle is agile following a TDD process, each features is tested and developed piece by piece and deployed as soon as possible in production.
