--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="col-xs-8">
               <h4>Description</h4>
 
-              <p><a href="www.helperchoice.com">www.helperchoice.com</a></p>
+              <p><a href="https://www.helperchoice.com">www.helperchoice.com</a></p>
 
               <p>
                 Redesigned the whole application architecture, developed the new platform, managed the transition from the previous website, secured the payment workflow and integrated new business features. Business needs are specified directly by the CEO and then designed and implemented by me. The development cycle is agile following a TDD process, each features is tested and developed piece by piece and deployed as soon as possible in production.
@@ -208,7 +208,7 @@
 
             <div class="col-xs-8">
               <h4>Description</h4>
-              <p><a href="www.doctheure.com">www.doctheure.com</a></p>
+              <p><a href="http://www.doctheure.com">www.doctheure.com</a></p>
 
               <p>
                 DoctHeure is a web application that allow medical practitioners to easily automate secretary's tasks. The patient can take an appointment on the web application or by phone call. An email and/or a sms is send the day before the appointment. The features can be configure by the practitioner to fit his needs.
