--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div> <!-- col -->
 
             <div class="col-xs-10">
-              <h3>HelperChoice - Tech Lead <small>Hong Kong - Jul 2015 to present</small></h3>
+              <h3>HelperChoice - Tech Lead <small>Hong Kong - Jul 2015 to May 2017</small></h3>
 
               <p>
                 Rebuild and enhance the leading social platform in Hong Kong that connects families and domestic helpers.
