add consulting page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="About Marc Chamberlin">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -47,351 +48,62 @@
 
         </div> <!-- row -->
 
-        <!-- work experience -->
         <div class="row">
-          <h2>Work Experience</h2>
+          <h2>About me</h2>
 
-          <!-- HelperChoice -->
           <div class="row">
             <div class="col-xs-2">
-              <img src="./img/helperchoice.png" alt="HelperChoice Thumbnail" class="img-rounded img-responsive">
+              <img src="./img/pic.jpg" alt="Marc Chamberlin" class="img-rounded img-responsive">
             </div> <!-- col -->
 
-            <div class="col-xs-10">
-              <h3>HelperChoice - Tech Lead <small>Hong Kong - Jul 2015 to May 2017</small></h3>
-
+            <div class="col-xs-10 lead">
               <p>
-                Rebuild and enhance the leading social platform in Hong Kong that connects families and domestic helpers.
-                Second person to join this social startup, my role is to analyze the business needs, provide solutions according to the constraints we have to face.
-                In addition, I have the responsibility to keep the website up and scalable by delivering clean, maintainable and tested codebase.
+                Hi, I'm Marc Chamberlin, a French Back-End Engineer and member of <span class="brand">WebDev UnLimited</span>. I'm specialized in Ruby-on-Rails framework development.
               </p>
 
               <p>
-                The website attracts more than 8000 users per day. The startup itself was rewarded in Hong Kong for its social impact and was the only asian finalist in a purposed-based contest supported by the UN Foundation.
+                I can write code and offer counselling. I'm working remotely or in your office in Hong Kong.
+                I can help you to:
               </p>
 
-              <h4>
-                <span class="label label-primary">Web Development</span>
-                <span class="label label-primary">Web Administration</span>
-                <span class="label label-primary">Startup</span>
-                <span class="label label-primary">Social Enterprise</span>
-              </h4>
-
-            </div> <!-- col -->
-          </div> <!-- row -->
-
-          <hr>
-
-          <!-- DoctHeure -->
-          <div class="row">
-            <div class="col-xs-2">
-              <img src="./img/doctheure.jpg" alt="DoctHeure Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col -->
-
-            <div class="col-xs-10">
-              <h3>DoctHeure - Founder <small>Paris - Jan 2013 to Jul 2015</small></h3>
+              <ul>
+                <li>Create an application from scratch</li>
+                <li>Implement new features for your current application</li>
+                <li>Review and enhance your codebase</li>
+                <li>Choose the right tools for the job</li>
+              </ul>
 
               <p>
-                Founded and managed a solo startup of web solutions for medical practitioners. Created a web application based on customer's needs. Along the technical parts, worked on business development, costs estimation, sales forcasting, and sales.
-              </p>
-
-              <h4>
-                <span class="label label-primary">Web Development</span>
-                <span class="label label-primary">Web Administration</span>
-                <span class="label label-primary">Healthcare</span>
-                <span class="label label-primary">Entrepreneurship</span>
-                <span class="label label-primary">Customer's Relationship</span>
-              </h4>
-
-            </div> <!-- col -->
-          </div> <!-- row -->
-
-          <hr>
-
-          <!-- Lipton Fit -->
-          <div class="row">
-            <div class="col-xs-2">
-              <img src="./img/liptonfit.jpg" alt="Lipton Fit Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col -->
-
-            <div class="col-xs-10">
-              <h3>Lipton Fit - Software Engineer Consultant <small>Paris - Mar 2011 to Jan 2013</small></h3>
-
-              <p>
-                In mission at Caceis Fund Administration as Software Engineer. Lead Developer of the Financial Reporting Team (3 developers). Responsible of the enhancement of new features of the business core software as IFRS7 risk calculation or third-party software StatPro integration. Designed financial reporting templates and populated them with stored procedures that accessed a datawarehouse.
-              </p>
-
-              <h4>
-                <span class="label label-primary">Software Development</span>
-                <span class="label label-primary">Team development</span>
-                <span class="label label-primary">Banking Services</span>
-                <span class="label label-primary">Middleware Architecture</span>
-              </h4>
-            </div> <!-- col -->
-          </div> <!-- row -->
-
-        </div> <!-- row -->
-
-        <!-- Projects -->
-        <div class="row">
-          <h2>Projects</h2>
-
-          <!-- HelperChoice -->
-          <div class="row">
-            <h3>HelperChoice Platform</h3>
-
-            <div class="col-xs-8">
-              <h4>Description</h4>
-
-              <p><a href="https://www.helperchoice.com">www.helperchoice.com</a></p>
-
-              <p>
-                Redesigned the whole application architecture, developed the new platform, managed the transition from the previous website, secured the payment workflow and integrated new business features. Business needs are specified directly by the CEO and then designed and implemented by me. The development cycle is agile following a TDD process, each features is tested and developed piece by piece and deployed as soon as possible in production.
+                Find here my previous experiences: <a href="/resume" target="_blank">resume</a>.
               </p>
 
               <p>
-                The website users are present in 10 countries and a large part are using the previous generation smartphones. To handle these constraints the website is built using responsive design techniques available on modern and legacy browsers. The core of the architecture is a Ruby-on-Rails application (MVC, REST) associated with the "best for the job" tools.
+                My hourly rate is <b>25€/hr</b>.
+                If you're interested, contact me through the header with your favorite channel.
               </p>
-
-            </div> <!-- col-6 -->
-
-            <div class="col-xs-4">
-              <h4>Stack</h4>
-
-              <dl>
-                <dt>Back-end</dt>
-                <span class="label label-primary">Ruby-on-Rails</span>
-                <span class="label label-primary">Postgresql</span>
-                <span class="label label-primary">Redis</span>
-                <span class="label label-primary">Devise</span>
-                <span class="label label-primary">ActiveAdmin</span>
-
-                <dt>Front-end</dt>
-                <span class="label label-warning">Bootstrap</span>
-                <span class="label label-warning">HTML5 CSS3</span>
-                <span class="label label-warning">SASS</span>
-
-                <dt>Testing</dt>
-                <span class="label label-success">TDD</span>
-                <span class="label label-success">RSpec</span>
-                <span class="label label-success">FactoryGirl</span>
-                <span class="label label-success">Capybara</span>
-                <span class="label label-success">Guard</span>
-
-                <dt>Third Party Application</dt>
-                <span class="label label-danger">Paypal</span>
-                <span class="label label-danger">Stripe</span>
-                <span class="label label-danger">Mandrill/Mailchimp</span>
-                <span class="label label-danger">Facebook</span>
-
-                <dt>Admin Tools</dt>
-                <span class="label label-info">Engine Yard</span>
-                <span class="label label-info">New Relic</span>
-                <span class="label label-info">Sentry</span>
-                <span class="label label-info">Google Analytics</span>
-
-                <dt>Development Tools</dt>
-                <span class="label label-default">Jira</span>
-                <span class="label label-default">Git</span>
-                <span class="label label-default">Github</span>
-                <span class="label label-default">Sublime</span>
-              </dl>
-
-            </div> <!-- col-6 -->
-          </div> <!-- row -->
-
-          <hr>
-
-          <!-- DoctHeure -->
-          <div class="row">
-            <h3>DoctHeure Web Application</h3>
-
-            <div class="col-xs-8">
-              <h4>Description</h4>
-              <p><a href="http://www.doctheure.com">www.doctheure.com</a></p>
-
-              <p>
-                DoctHeure is a web application that allow medical practitioners to easily automate secretary's tasks. The patient can take an appointment on the web application or by phone call. An email and/or a sms is send the day before the appointment. The features can be configure by the practitioner to fit his needs.
-              </p>
-
-              <p>
-                The application have been developed by myself and the open-source community through a rigourous development method. The kanban process was use to list and prioritize tasks and keep a trace of deployment cycle (test, development, staging, production). The TDD process was used to keep the application clean and to avoid any regressions.
-              </p>
-
-            </div> <!-- col-6 -->
-
-            <div class="col-xs-4">
-              <h4>Stack</h4>
-
-              <dl>
-                <dt>Back-end</dt>
-                <span class="label label-primary">Ruby-on-Rails</span>
-                <span class="label label-primary">Postgresql</span>
-                <span class="label label-primary">Devise</span>
-                <span class="label label-primary">ActiveAdmin</span>
-
-                <dt>Front-end</dt>
-                <span class="label label-warning">Bootstrap</span>
-                <span class="label label-warning">HTML5 CSS3</span>
-                <span class="label label-warning">SASS</span>
-
-                <dt>Testing</dt>
-                <span class="label label-success">TDD</span>
-                <span class="label label-success">RSpec</span>
-                <span class="label label-success">FactoryGirl</span>
-                <span class="label label-success">Capybara</span>
-                <span class="label label-success">Guard</span>
-
-                <dt>Third Party Application</dt>
-                <span class="label label-danger">Twilio</span>
-                <span class="label label-danger">SMSFactor</span>
-                <span class="label label-danger">Mandrill</span>
-                <span class="label label-danger">Geocoder</span>
-
-                <dt>Admin Tools</dt>
-                <span class="label label-info">Heroku</span>
-                <span class="label label-info">Sentry</span>
-
-                <dt>Development Tools</dt>
-                <span class="label label-default">Trello</span>
-                <span class="label label-default">Git</span>
-                <span class="label label-default">Github</span>
-                <span class="label label-default">Sublime</span>
-              </dl>
-
-            </div> <!-- col-6 -->
-          </div> <!-- row -->
-
-          <hr>
-
-          <!-- IFRS7 Risk Calculation -->
-          <div class="row">
-            <h3>IFRS7 Risk Calculation</h3>
-
-            <div class="col-xs-8">
-              <h4>Description</h4>
-
-              <p>
-                The IFRS7 notation is a value from 1(good) to 3(bad) that estimate the risk level of each assets of a financial portfolio (hedge fund). The value is weight by rules like for example the nationality of the fund or the type of asset. Each fund holder can choose the rules they want to apply.
-              </p>
-
-              <p>
-                The existing business core software had a Service Oriented Architecture so the feature was implemented as a web service and "plug" in the existing system. The service was triggered by an UI through an API. The UI also allowed the user to create and to weight rules to a portfolio. A specific algorithm was design to reduce databases I/O and avoid unnecessary operations.
-              </p>
-
-            </div> <!-- col-6 -->
-
-            <div class="col-xs-4">
-              <h4>Stack</h4>
-
-              <dl>
-                <dt>Back-end</dt>
-                <span class="label label-primary">Java J2EE</span>
-                <span class="label label-primary">Sybase</span>
-                <span class="label label-primary">Struts</span>
-                <span class="label label-primary">Hibernate</span>
-
-                <dt>Front-end</dt>
-                <span class="label label-warning">JSP</span>
-
-                <dt>Testing</dt>
-                <span class="label label-success">JUnit</span>
-
-                <dt>Development Tools</dt>
-                <span class="label label-default">Jirah</span>
-                <span class="label label-default">SVN</span>
-                <span class="label label-default">Eclipse</span>
-              </dl>
-
-            </div> <!-- col-6 -->
-          </div> <!-- row -->
-
-          <hr>
-
-          <!-- Actuate -->
-          <div class="row">
-            <h3>Financial Reporting Generation</h3>
-
-            <div class="col-xs-8">
-              <h4>Description</h4>
-
-              <p>
-                A financial reporting is 2 pages of technical information about a financial portfolio. The project was to automate monthly reporting of specific portfolios with informations saved in a datawarehouse. I used the software Actuate to design the reporting template and populated it trough stocked procedure.
-              </p>
-
-              <p>
-                Actuate design module is built on Visual Basic language. It allowed me to create DRY design component for templates (such as headers, footers, curves, tables).
-              </p>
-
-            </div> <!-- col-6 -->
-
-            <div class="col-xs-4">
-              <h4>Stack</h4>
-
-              <dl>
-                <dt>Database</dt>
-                <span class="label label-primary">Datawarehouse Model</span>
-                <span class="label label-primary">Sybase</span>
-                <span class="label label-primary">Transact SQL</span>
-
-                <dt>Design Tool</dt>
-                <span class="label label-warning">Actuate</span>
-                <span class="label label-warning">Visual Basic</span>
-              </dl>
-
-            </div> <!-- col-6 -->
-          </div> <!-- row -->
-        </div> <!-- row -->
-
-        <hr>
-
-        <!-- Education -->
-        <div class="row">
-          <h2>Education</h2>
-
-          <!-- Epita -->
-          <div class="row">
-            <div class="col-xs-2">
-              <img src="./img/epita.jpg" alt="Epita Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col -->
-
-            <div class="col-xs-10">
-              <h3>EPITA - Master in Computer Science <small>Paris - 2011</small></h3>
-              <h4>Specialized in Information System and Software Engineering</h4>
-
-              <p>
-                Learned programming, data structures and algorithms, UNIX, software development methodology, programming languages (C, C++, Perl, OCaml, Java), and general engineering skills.
-              </p>
-
-              <p>
-                Been elected class representative 5 years in a row. Worked on cohesion of the group, delivered information to the class, organized the course planning of the last year school, improved the sense of organization and team working cohesion.
-              </p>
-
-            </div> <!-- col -->
-          </div> <!-- row -->
-
-          <!-- Languages -->
-          <div class="row">
-            <div class="col-xs-2">
-              <img src="./img/languages.png" alt="Languages Thumbnail" class="img-rounded img-responsive">
-            </div> <!-- col -->
-
-            <div class="col-xs-10">
-              <h3>Languages</h3>
-
-              <dl>
-                <dt>French</dt>
-                <dd>Mother tongue</dd>
-
-                <dt>English</dt>
-                <dd>Advanced level (TOEIC: 900/990)</dd>
-              </dl>
 
             </div> <!-- col -->
           </div> <!-- row -->
         </div> <!-- row -->
 
+        <div class="row">
+          <h2>About WebDev UnLimited</h2>
 
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/WDU-logo.png" alt="WebDev UnLimited" class="img-rounded img-responsive">
+            </div> <!-- col -->
+
+            <div class="col-xs-10 lead">
+            <p>
+              <span class="brand">WebDev UnLimited</span> design and develop solutions that solve users’ problems.
+            </p>
+            <p>
+              Their members can work as a complete technical team for you or as additional skilled people on your existing team, infecting them with good practices.
+            </p>
+            </div> <!-- col -->
+          </div> <!-- row -->
+        </div> <!-- row -->
       </div> <!-- col-off-1 col-10 -->
     </div> <!-- container -->
 
