--- a/resume.html
+++ b/resume.html
@@ -51,6 +51,38 @@
         <div class="row">
           <h2>Work Experience</h2>
 
+          <!-- BookingSync -->
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/bookingsync.png" alt="BookingSync Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col -->
+
+            <div class="col-xs-10">
+              <h3>BookingSync - Senior Developer / Team Leader <small>Hong Kong - June 2017 (current position)</small></h3>
+
+              <p>
+                Remote based company with collaborators all around the world, BookingSync provides services to vacation rentals property managers through multiple in-house applications and external partners systems such as Airbnb, Booking.com and TripAdvisor.
+              </p>
+
+              <p>
+                As Senior Developer, my role is to keep the team's applications up and running, oversee the work of other developers and design more complex features implementation.
+              </p>
+
+              <p>
+                As Team Leader, my role is to facilitate the communication between with other teams and also to smoother the organisation within the team (4 developers & 2 customer supports).
+              </p>
+
+              <h4>
+                <span class="label label-primary">Web Development</span>
+                <span class="label label-primary">Web Administration</span>
+                <span class="label label-primary">Vacation Rental</span>
+              </h4>
+
+            </div> <!-- col -->
+          </div> <!-- row -->
+
+          <hr>
+
           <!-- HelperChoice -->
           <div class="row">
             <div class="col-xs-2">
@@ -61,9 +93,9 @@
               <h3>HelperChoice - Tech Lead <small>Hong Kong - Jul 2015 to May 2017</small></h3>
 
               <p>
-                Rebuild and enhance the leading social platform in Hong Kong that connects families and domestic helpers.
-                Second person to join this social startup, my role is to analyze the business needs, provide solutions according to the constraints we have to face.
-                In addition, I have the responsibility to keep the website up and scalable by delivering clean, maintainable and tested codebase.
+                Rebuilt and enhanced the leading social platform in Hong Kong that connects families and domestic helpers.
+                Second person to join this social startup, my role was to analyze the business needs, provide solutions according to the constraints we had to face.
+                In addition, I had the responsibility to keep the website up and scalable by delivering clean, maintainable and tested codebase.
               </p>
 
               <p>
@@ -135,6 +167,75 @@
         <!-- Projects -->
         <div class="row">
           <h2>Projects</h2>
+
+          <!-- BookingSync -->
+          <div class="row">
+            <h3>BookingSync Notification Center App</h3>
+
+            <div class="col-xs-8">
+              <h4>Description</h4>
+
+              <p><a href="https://www.bookingsync.com">www.bookingsync.com</a></p>
+
+              <p>
+                The Notification App is critical in the vacation rental process as it handles all the emailing of checkin and checkout details, payment reminders and other informations to the traveler. This application relies heavily on background jobs and real-time constraints.
+              </p>
+
+              <p>
+                Joined the team when the application was 2 years old, started by improving the onboarding for new developers with a documentation that covers installation, setup, development process, testing, deployment and monitoring of the application. Fixed all warnings and stylecheck offenses and removed n+1 queries.
+              </p>
+
+              <p>
+                Implemented soft-deletion feature for all DB records for data recovery and audit. Designed and implemented an object-oriented form to input recipients for email template that replaced an error-prone user typed string. The new designed reduced the amount of email addresses typos and improved the UX with a point-and-click recipient selection instead of a keyboard typed one.
+              </p>
+
+            </div> <!-- col-6 -->
+
+            <div class="col-xs-4">
+              <h4>Stack</h4>
+
+              <dl>
+                <dt>Back-end</dt>
+                <span class="label label-primary">Ruby-on-Rails</span>
+                <span class="label label-primary">Postgresql</span>
+                <span class="label label-primary">Redis</span>
+                <span class="label label-primary">Sidekiq</span>
+
+                <dt>Front-end</dt>
+                <span class="label label-warning">Bootstrap</span>
+                <span class="label label-warning">HTML5 CSS3</span>
+                <span class="label label-warning">SASS</span>
+                <span class="label label-warning">Slim Templates</span>
+                <span class="label label-warning">Liquid Templates</span>
+
+                <dt>Testing</dt>
+                <span class="label label-success">TDD</span>
+                <span class="label label-success">RSpec</span>
+                <span class="label label-success">FactoryBot</span>
+                <span class="label label-success">CircleCI</span>
+
+                <dt>Third Party Application</dt>
+                <span class="label label-danger">Paypal</span>
+                <span class="label label-danger">Stripe</span>
+                <span class="label label-danger">Mandrill/Mailchimp</span>
+                <span class="label label-danger">Geocoder</span>
+
+                <dt>Admin Tools</dt>
+                <span class="label label-info">Deis/Workflow</span>
+                <span class="label label-info">New Relic</span>
+                <span class="label label-info">Sentry</span>
+
+                <dt>Development Tools</dt>
+                <span class="label label-default">Jira</span>
+                <span class="label label-default">Git</span>
+                <span class="label label-default">Github</span>
+                <span class="label label-default">Sublime</span>
+              </dl>
+
+            </div> <!-- col-6 -->
+          </div> <!-- row -->
+
+          <hr>
 
           <!-- HelperChoice -->
           <div class="row">
@@ -401,14 +502,5 @@
     <script src="js/vendor/bootstrap.min.js"></script>
 
     <script src="js/main.js"></script>
-
-    <!-- Segment -->
-    <script type="text/javascript">
-      !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
-      analytics.load("KoH2mSDIgeaNoqpW5jyFFWrHAYiKXb32");
-      analytics.page();
-      }}();
-    </script>
-
   </body>
 </html>
