--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </p>
 
               <p>
-                I can write code and offer counselling. I'm working remotely or in your office in Hong Kong.
+                I can write code and offer counselling.
                 I can help you to:
               </p>
 
@@ -78,29 +78,10 @@
               </p>
 
               <p>
-                My hourly rate is <b>25€/hr</b>.
+                My hourly rate is <b>50€/hr</b>.
                 If you're interested, contact me through the header with your favorite channel.
               </p>
 
-            </div> <!-- col -->
-          </div> <!-- row -->
-        </div> <!-- row -->
-
-        <div class="row">
-          <h2>About WebDev UnLimited</h2>
-
-          <div class="row">
-            <div class="col-xs-2">
-              <img src="./img/WDU-logo.png" alt="WebDev UnLimited" class="img-rounded img-responsive">
-            </div> <!-- col -->
-
-            <div class="col-xs-10 lead">
-            <p>
-              <span class="brand">WebDev UnLimited</span> design and develop solutions that solve users’ problems.
-            </p>
-            <p>
-              Their members can work as a complete technical team for you or as additional skilled people on your existing team, infecting them with good practices.
-            </p>
             </div> <!-- col -->
           </div> <!-- row -->
         </div> <!-- row -->
@@ -113,14 +94,6 @@
     <script src="js/vendor/bootstrap.min.js"></script>
 
     <script src="js/main.js"></script>
-
-    <!-- Segment -->
-    <script type="text/javascript">
-      !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
-      analytics.load("KoH2mSDIgeaNoqpW5jyFFWrHAYiKXb32");
-      analytics.page();
-      }}();
-    </script>
 
   </body>
 </html>
