add appysport experience

--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
           <i class="fa fa-envelope fa-lg"></i>
         </a>
 
-        <a href="http://www.linkedin.com/in/chamberlinmarc/en" class="btn btn-default">
+        <a href="https://www.linkedin.com/in/chamberlinmarc/en" class="btn btn-default">
           <i class="fa fa-linkedin fa-lg"></i>
         </a>
 
@@ -39,9 +39,11 @@
           <i class="fa fa-github fa-lg"></i>
         </a>
 
-        <a href="http://stackoverflow.com/users/2969823/chambeur?tab=profile" class="btn btn-default">
+        <a href="https://stackoverflow.com/users/2969823/chambeur?tab=profile" class="btn btn-default">
           <i class="fa fa-stack-overflow fa-lg"></i>
         </a>
+
+        <h4><small>Valid Hong Kong Work Visa Holder</small></h4>
 
       </div> <!-- row -->
 
@@ -49,7 +51,95 @@
         <h2>Work Experience</h2>
 
         <div class="col-xs-12">
-          <h3>BookingSync - Senior Developer / Team Leader <small>Hong Kong - Jun 2017 to present</small></h3>
+          <h3>Appysport - Senior Developer <small>Hong Kong - Part-time since Sep 2018, full-time since Oct 2019 to present</small></h3>
+
+          <div class="row">
+            <div class="col-xs-2">
+              <img src="./img/appysport.png" alt="Appysport Thumbnail" class="img-rounded img-responsive">
+            </div> <!-- col -->
+
+            <div class="col-xs-8">
+              <p>
+                Appysport is a start-up based in Hong Kong aiming to facilitate sports practice in Hong Kong with technology. Appysport started with tennis and watersports to make them more accessible to the many and wants to make it possible for sports lovers to easily propose or join activities, invite their friends, hire coaches, or even rent equipment.
+              </p>
+
+              <p>
+                As a Senior Developer, my role is to design and build the Appysport platform, work closely with the product managers to provide technical solutions and integrate the existing external platforms to our own backoffice.
+              </p>
+
+              <p><a href="https://www.appysport.com">www.appysport.com</a></p>
+
+              <h4>
+                <span class="label label-primary">Web Development</span>
+                <span class="label label-primary">Startup</span>
+                <span class="label label-primary">Sport Innovation</span>
+              </h4>
+            </div> <!-- col -->
+          </div> <!-- row -->
+
+          <hr/>
+
+          <h4>Appysport Platform</h4>
+
+          <div class="row">
+            <div class="col-md-8">
+              <h5>Description</h5>
+              <p>
+                The Appysport platform aggregates multiple "macro-services" organised around multiple sports such as watersports, tennis (shutdown end 2019) and fitness. Shopify is used to host data, display the services (classes, lessons, rentals, etc) rendered with a custom Liquid template and handle the checkout process.
+              </p>
+
+              <p>
+                An ETL built with Elixir served as bridge between the data provider Anybuddy and Shopify. It was designed to be fast, lightweight, fault-tolerant and mitigate Shopify API rate limits. Elixir pre-built scheduler served as an integrated CRON service.
+              </p>
+
+              <p>
+                Bookings' followup emails (confirmation to the customer/partner, cancelation, instructions, etc) was done with a Ruby-on-Rails application. A custom Domain Specific Language (DSL) was designed to simplify the configuration of automated emails and their integration with Sendgrid.
+              </p>
+
+            </div> <!-- col -->
+
+            <div class="col-md-4">
+              <h5>Stack</h5>
+
+              <dl>
+                <dt>Back-end</dt>
+                <span class="label label-primary">Ruby-on-Rails</span>
+                <span class="label label-primary">Elixir</span>
+                <span class="label label-primary">Postgresql</span>
+
+                <dt>Front-end</dt>
+                <span class="label label-warning">VueJS</span>
+                <span class="label label-warning">NuxtJS</span>
+                <span class="label label-warning">Liquid Templates</span>
+
+                <dt>Testing</dt>
+                <span class="label label-success">TDD</span>
+                <span class="label label-success">RSpec/ESpec</span>
+
+                <dt>Third Party Application</dt>
+                <span class="label label-danger">Shopify GraphQL API</span>
+                <span class="label label-danger">Anybuddy</span>
+                <span class="label label-danger">Auth0</span>
+                <span class="label label-danger">Sendgrid</span>
+
+                <dt>Admin Tools</dt>
+                <span class="label label-info">KintoHub</span>
+                <span class="label label-info">Sentry</span>
+                <span class="label label-info">Cloudflare</span>
+
+                <dt>Development Tools</dt>
+                <span class="label label-default">Jira</span>
+                <span class="label label-default">Trello</span>
+                <span class="label label-default">Git</span>
+                <span class="label label-default">Github</span>
+                <span class="label label-default">Sublime</span>
+              </dl>
+            </div> <!-- col -->
+          </div> <!-- row -->
+
+          <h2/>
+
+          <h3>BookingSync - Senior Developer / Team Leader <small>Hong Kong - Jun 2017 to Sept 2019</small></h3>
 
           <div class="row">
             <div class="col-xs-2">
@@ -58,11 +148,11 @@
 
             <div class="col-xs-8">
               <p>
-                BookingSync is a remote-based company with collaborators all around the world. It provides services to vacation rentals property managers through multiple in-house applications and external partner systems such as Airbnb, Booking.com and TripAdvisor. More than 20.000 rentals are managed over 66 countries. More than 2.3 billion bookings were handled through Bookingsync.
+                BookingSync is a remote-based company with collaborators all around the world. It provides services to vacation rentals property managers through multiple in-house applications and external partner systems such as Airbnb, Booking.com and TripAdvisor. More than 20.000 rentals are managed in over 66 countries. More than 2.3 billion bookings were handled through Bookingsync.
               </p>
 
               <p>
-                As a Senior Developer, my role is to design more complex features and to oversee the work of other developers. I also had to keep applications under my scope up and running. Those applications had various business objectives:
+                As a Senior Developer, my role was to design more complex features and to oversee the work of other developers. I also had to keep applications under my scope up and running. Those applications had various business objectives:
                 <ul>
                   <li>Notification Center app that triggers emails sent to travelers</li>
                   <li>Owners portal app that facilitates communication between a property manager and the rental's owner</li>
@@ -74,7 +164,7 @@
               </p>
 
               <p>
-                As a Team Leader, my role is to facilitate the communication between with other teams and also to smoother the organization within the team (4 developers & 2 customer supports).
+                As a Team Leader, my role was to facilitate the communication between with other teams and also to smoother the organization within the team (4 developers & 2 customer supports).
               </p>
 
               <p><a href="https://www.bookingsync.com">www.bookingsync.com</a></p>
@@ -308,7 +398,7 @@
                 Founded and managed a solo startup of web solutions for medical practitioners. Created a web application based on customer's needs. Along with the technical parts, I worked on business development, costs estimation, sales forecasting, and sales.
               </p>
 
-              <p><a href="http://www.doctheure.com">www.doctheure.com</a></p>
+              <p><a href="https://www.doctheure.com">www.doctheure.com</a></p>
 
               <h4>
                 <span class="label label-primary">Web Development</span>
@@ -491,7 +581,7 @@
               </p>
 
               <p>
-                The first technical goal of this project was to learn EmberJS to complete my front-end development skills. The second technical goal was to migrate the Ruby-on-Rails codebase into an Elixir/Phoenix codebase to learn a improve the app performance.
+                The first technical goal of this project was to learn EmberJS to complete my front-end development skills. The second technical goal was to migrate the Ruby-on-Rails codebase into an Elixir/Phoenix codebase to learn and improve the app performance.
               </p>
 
               <p><a href="https://coinberg.app">coinberg.app</a></p>
@@ -581,7 +671,7 @@
       </div> <!-- row -->
     </div> <!-- container -->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
     <script src="js/vendor/bootstrap.min.js"></script>
